k8s/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vet-clinic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: DearingClinic
  template:
    metadata:
      labels:
        app: DearingClinic
    spec:
      containers:
        - name: dearingvetclinic-container
          image: vetacrrepo.azurecr.io/cmakkaya/sprig-project-vet-clenic-azuredevopspipeline:20
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: vet-clinic-service
spec:
  selector:
    app: DearingClinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
