k8s/ingress-capstone.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
    kompose.image-pull-secret: regcred
    kompose.service.expose: vet-clinic-with-aks.akkaya.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: vet-clinic-with-aks.akkaya.com
      http:
        paths:
          - backend:
              service:
                name: vet-clinic-deployment
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
